tests/iam/awsiampolicy/01-awsiamconfig-default.yaml
apiVersion: kropath.run/v1alpha1
kind: AWSIAMConfig
metadata:
  name: general-policy
  namespace: awsiampolicy
  labels:
    aws.kropath.run/resource-name: general-policy
spec:
  mandatory:
    permissionsBoundaryArn: ""
    blockIamUserAccessKeys: false
    maxSessionDurationSeconds: 0
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
  defaults:
    permissionsBoundaryArn: ""
    blockIamUserAccessKeys: false
    maxSessionDurationSeconds: 3600
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
