tests/iam/awsiampolicy/01-awsiampolicy-documentjson.yaml
apiVersion: kropath.run/v1alpha1
kind: AWSIAMPolicy
metadata:
  name: document-json-only
  namespace: default
spec:
  configRef: general-policy
  description: "Policy defined via raw JSON"
  path: "/"
  nameOverride: ""
  deletionPolicy: retain
  documentJSON: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"s3:GetObject","Resource":"*"}]}'
  documentRef: ""
  tags: {}
  syncedLabels: {}
  syncedAnnotations: {}
