tests/iam/awsiampolicy/02-awsiampolicy-documentref.yaml
apiVersion: kropath.run/v1alpha1
kind: AWSIAMPolicy
metadata:
  name: document-ref-only
  namespace: default
spec:
  configRef: general-policy
  description: "Policy sourced from AWSPolicyDocument"
  path: "/"
  nameOverride: ""
  deletionPolicy: retain
  documentJSON: ""
  documentRef: my-policy-doc
  tags: {}
  syncedLabels: {}
  syncedAnnotations: {}
