tests/iam/awsiampolicy/02-awspolicydocument.yaml
apiVersion: kropath.run/v1alpha1
kind: AWSPolicyDocument
metadata:
  name: my-policy-doc
  namespace: awsiampolicy
  labels:
    aws.kropath.run/resource-name: my-policy-doc
spec:
  documentJSON: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"s3:PutObject","Resource":"*"}]}'
