tests/iam/awsiampolicy/05-awsiampolicy-service-role.yaml
apiVersion: kropath.run/v1alpha1
kind: AWSIAMPolicy
metadata:
  name: service-role-policy
  namespace: awsiampolicy
spec:
  configRef: general-policy
  description: "Policy with service role path"
  path: "/service-role/"
  nameOverride: ""
  deletionPolicy: retain
  documentJSON: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"logs:CreateLogGroup","Resource":"*"}]}'
  documentRef: ""
  tags: {}
  syncedLabels: {}
  syncedAnnotations: {}
