tests/iam/awsiampolicy/06-awsiamconfig-payments-prod.yaml
apiVersion: kropath.run/v1alpha1
kind: AWSIAMConfig
metadata:
  name: general-policy
  namespace: payments-prod
spec:
  mandatory:
    permissionsBoundaryArn: ""
    blockIamUserAccessKeys: false
    maxSessionDurationSeconds: 0
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
  defaults:
    permissionsBoundaryArn: ""
    blockIamUserAccessKeys: false
    maxSessionDurationSeconds: 3600
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
