tests/iam/awsiampolicy/07-awsiampolicy-tags.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AWSIAMPolicy
metadata:
  name: tagged-policy
  namespace: awsiampolicy
spec:
  configRef: general-policy
  description: "Tagged policy"
  path: "/"
  nameOverride: ""
  deletionPolicy: retain
  documentJSON: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"s3:GetObject","Resource":"*"}]}'
  documentRef: ""
  tags:
    team: payments
  syncedLabels: {}
  syncedAnnotations: {}
