tests/iam/awsiampolicy/08-awsiampolicy-synced-labels.yaml
apiVersion: kropath.run/v1alpha1
kind: AWSIAMPolicy
metadata:
  name: labeled-policy
  namespace: default
spec:
  configRef: general-policy
  description: "Labeled policy"
  path: "/"
  nameOverride: ""
  deletionPolicy: retain
  documentJSON: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"s3:GetObject","Resource":"*"}]}'
  documentRef: ""
  tags: {}
  syncedLabels:
    environment: production
  syncedAnnotations: {}
