tests/iam/awsiampolicy/10-awsiampolicy-standard-metadata.yaml
apiVersion: kropath.run/v1alpha1
kind: AWSIAMPolicy
metadata:
  name: standard-metadata
  namespace: awsiampolicy
spec:
  configRef: general-policy
  description: "Standard metadata policy"
  path: "/"
  nameOverride: ""
  deletionPolicy: retain
  documentJSON: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"s3:GetObject","Resource":"*"}]}'
  documentRef: ""
  tags: {}
  syncedLabels: {}
  syncedAnnotations: {}
