tests/iam/awsiampolicy/11-awsiampolicy-delete-policy.yaml
apiVersion: kropath.run/v1alpha1
kind: AWSIAMPolicy
metadata:
  name: delete-policy
  namespace: awsiampolicy
spec:
  configRef: general-policy
  description: "Delete policy"
  path: "/"
  nameOverride: ""
  deletionPolicy: delete
  documentJSON: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"s3:GetObject","Resource":"*"}]}'
  documentRef: ""
  tags: {}
  syncedLabels: {}
  syncedAnnotations: {}
