tests/iam/awsiampolicy/12-awsiamrole-consumer.yaml
apiVersion: kropath.run/v1alpha1
kind: AWSIAMRole
metadata:
  name: policy-consumer-role
  namespace: default
spec:
  configRef: general-policy
  nameOverride: ""
  deletionPolicy: retain
  type: lambda
  description: "Role consuming AWSIAMPolicy via policies[].ref"
  tags: {}
  syncedLabels: {}
  syncedAnnotations: {}
  policies:
    - ref: s3-read
  addLambdaBasicPolicy: false
  maxSessionDuration: 0
