tests/iam/awsiampolicy/12-invalid-empty-source.yaml
apiVersion: kropath.run/v1alpha1
kind: AWSIAMPolicy
metadata:
  name: invalid-empty-source
  namespace: default
spec:
  configRef: general-policy
  description: "Invalid policy with neither source set"
  path: "/"
  nameOverride: ""
  deletionPolicy: retain
  documentJSON: ""
  documentRef: ""
  tags: {}
  syncedLabels: {}
  syncedAnnotations: {}
