tests/iam/awsiampolicy/01-assert-created-policy.yaml
apiVersion: iam.services.k8s.aws/v1alpha1
kind: Policy
metadata:
  name: document-json-only
  namespace: default
  labels:
    app.kubernetes.io/managed-by: kro
    app.kubernetes.io/instance: document-json-only
spec:
  name: document-json-only
  path: "/"
  description: "Policy defined via raw JSON"
  policyDocument: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"s3:GetObject","Resource":"*"}]}'
