tests/iam/awsiampolicy/02-assert-created-policy.yaml
apiVersion: iam.services.k8s.aws/v1alpha1
kind: Policy
metadata:
  name: document-ref-only
  namespace: awsiampolicy
spec:
  name: awsiampolicy-document-ref-only
  path: "/"
  description: "Policy sourced from AWSPolicyDocument"
  policyDocument: '{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"s3:PutObject","Resource":"*"}]}'
