tests/iam/awsiampolicy/05-assert-service-role-policy.yaml
apiVersion: iam.services.k8s.aws/v1alpha1
kind: Policy
metadata:
  name: service-role-policy
  namespace: default
spec:
  name: service-role-policy
  path: "/service-role/"
  description: "Policy with service role path"
