tests/iam/awsiampolicy/06-assert-resource-name.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AWSIAMPolicy
metadata:
  name: s3-read
  namespace: awsiampolicy
status:
  resourceName: awsiampolicy-s3-read
