tests/iam/awsiampolicy/07-assert-tags.yaml
apiVersion: iam.services.k8s.aws/v1alpha1
kind: Policy
metadata:
  name: tagged-policy
  namespace: awsiampolicy
spec:
  name: awsiampolicy-tagged-policy
  path: "/"
  tags:
    - key: cost-centre
      value: platform
    - key: team
      value: payments
