tests/iam/awsiampolicy/08-assert-synced-labels.yaml
apiVersion: iam.services.k8s.aws/v1alpha1
kind: Policy
metadata:
  name: default-labeled-policy
  namespace: default
  labels:
    kropath.run/environment: production
spec:
  name: default-labeled-policy
  path: "/"
  tags:
    - key: kropath.run/environment
      value: production
