tests/iam/awsiampolicy/09-assert-status-arn.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AWSIAMPolicy
metadata:
  name: arn-policy
  namespace: awsiampolicy
status:
  predictedArn: arn:aws:iam::123456789012:policy/awsiampolicy-arn-policy
