tests/iam/awsiampolicy/10-assert-standard-metadata.yaml
apiVersion: iam.services.k8s.aws/v1alpha1
kind: Policy
metadata:
  name: standard-metadata
  namespace: default
  labels:
    app.kubernetes.io/managed-by: kro
    app.kubernetes.io/instance: standard-metadata
  annotations:
    services.k8s.aws/deletion-policy: retain
  ownerReferences:
    - apiVersion: kropath.run/v1alpha1
      kind: AWSIAMPolicy
      name: standard-metadata
spec:
  name: standard-metadata
  path: "/"
