tests/iam/awsiampolicy/11-assert-delete-policy.yaml
apiVersion: iam.services.k8s.aws/v1alpha1
kind: Policy
metadata:
  name: delete-policy
  namespace: awsiampolicy
  annotations:
    services.k8s.aws/deletion-policy: delete
spec:
  name: awsiampolicy-delete-policy
  path: "/"
