tests/iam/awsiampolicy/12-assert-role-consumer.yaml
apiVersion: iam.services.k8s.aws/v1alpha1
kind: Role
metadata:
  name: default-policy-consumer-role
  namespace: default
spec:
  name: default-policy-consumer-role
  policies:
    - arn: arn:aws:iam::123456789012:policy/default-s3-read
